Add exclaimation mark to h1 msg

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1> Enjoy using Git! </h1>
+        <h1> Enjoy using Git!!! </h1>
         <h2>Very powerful toiol for tracking changes of our documents</h2>
     </body>
 </html>
